bk_ida/gccida/g0/copy_rtx_and_substitute
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/integrate.c:2341:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/integrate.c:2344:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/integrate.c:2350:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rttree; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/integrate.c:2379:1: error: must use 'union' tag to refer to type 'real_extract'
real_extract u; // [rsp+20h] [rbp-120h] BYREF 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/integrate.c:2382:4: error: expected ';' after expression
rtx equiv_loc; // [rsp+68h] [rbp-D8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/integrate.c:2382:5: error: use of undeclared identifier 'equiv_loc'
rtx equiv_loc; // [rsp+68h] [rbp-D8h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/integrate.c:2383:4: error: expected ';' after expression
rtx equiv_reg; // [rsp+70h] [rbp-D0h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/integrate.c:2383:5: error: use of undeclared identifier 'equiv_reg'
rtx equiv_reg; // [rsp+70h] [rbp-D0h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/integrate.c:2384:4: error: expected ';' after expression
rtx copy_0; // [rsp+78h] [rbp-C8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/integrate.c:2384:5: error: use of undeclared identifier 'copy_0'
rtx copy_0; // [rsp+78h] [rbp-C8h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/integrate.c:2385:4: error: expected ';' after expression
rtx seq; // [rsp+80h] [rbp-C0h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/integrate.c:2385:5: error: use of undeclared identifier 'seq'
rtx seq; // [rsp+80h] [rbp-C0h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/integrate.c:2388:4: error: expected ';' after expression
rtx loc; // [rsp+98h] [rbp-A8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/integrate.c:2388:5: error: use of undeclared identifier 'loc'
rtx loc; // [rsp+98h] [rbp-A8h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/integrate.c:2390:4: error: expected ';' after expression
rtx seq_0; // [rsp+A8h] [rbp-98h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/integrate.c:2390:5: error: use of undeclared identifier 'seq_0'
rtx seq_0; // [rsp+A8h] [rbp-98h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/integrate.c:2393:4: error: expected ';' after expression
rtx loc_0; // [rsp+C0h] [rbp-80h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/integrate.c:2393:5: error: use of undeclared identifier 'loc_0'
rtx loc_0; // [rsp+C0h] [rbp-80h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/integrate.c:2395:4: error: expected ';' after expression
rtx constant_0; // [rsp+D0h] [rbp-70h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_rtx_and_substitute/src/obj/integrate.o] Error 1
